# vnim

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
src/: IC.c  IC.h  Makefile.am  charset.c  charset.h  locales.h  main.c  unikey_xim.c  unikey_xim.h  vnim.c  vnim.h  vnim_private.h  wrapper.c  wrapper.h  xim.c
src/IMdkit/: i18nMethod.c
src/appindicator/: Makefile.am  main.c
src/ukengine/: Makefile.am  README  ukengine.cpp  unikey.h
src/viEngine/: Makefile.am  README.md  charset.c  charset.h  rules.c  test.c  vi-engine-private.h  vi-engine.c  vi-engine.h
