AM_CXXFLAGS = -Wall -funsigned-char

EXTRA_DIST             = README COPYING

noinst_LTLIBRARIES     = libunikey-ibus.la

libunikey_ibus_la_SOURCES = \
	byteio.cpp \
	charset.cpp \
	convert.cpp \
	data.cpp \
	error.cpp \
	inputproc.cpp \
	mactab.cpp \
	pattern.cpp \
	ukengine.cpp \
	unikey.cpp \
	usrkeymap.cpp \
    $(NULL)

